--- a/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
+++ b/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
@@ -1,4 +1,6 @@
 @use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
+
 .card {
   height: 180px;
   width: 100%;
@@ -12,16 +14,20 @@
   &:hover .image {
     display: none;
   }
+
   &:hover .title {
     padding-top: 32px;
   }
+
   &:hover .description {
     display: block;
   }
+
   &:hover {
     background-color: $color-primary;
   }
 }
+
 .vertical {
   height: 640px;
   width: 100%;
@@ -29,12 +35,15 @@
   & .title {
     font-size: 22px;
   }
+
   &:hover .content {
     justify-content: start;
   }
+
   &:hover .title {
     padding: 111px 0 57px;
   }
+
   &:hover .description {
     span {
       font-size: 12px;
@@ -44,19 +53,30 @@
       background-color: red;
     }
   }
+
+  @include mobile-tablet {
+    height: 300px;
+  }
+
+  @include laptop {
+    height: 400px;
+  }
 }
+
 .content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .title {
   font-size: 16px;
   font-weight: $fw-semibold;
   color: $color-white;
   z-index: 3;
 }
+
 .description {
   font-size: 12px;
   font-weight: $fw-regular;
@@ -68,21 +88,22 @@
   overflow-y: auto;
   line-height: 17px;
   text-align: left;
-  scrollbar-width: 3px;
-  scrollbar-color: $color-white;
 
   &::-webkit-scrollbar {
     width: 3px;
   }
+
   &::-webkit-scrollbar-track {
     background: rgba(201, 46, 46, 0);
   }
+
   &::-webkit-scrollbar-thumb {
     height: 2px;
     background-color: $color-white;
     border-radius: 20px; /* закругления плашки */
   }
 }
+
 .image {
   border-radius: 16px;
   position: absolute;
