--- a/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
+++ b/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .bg {
   height: 540px;
@@ -17,6 +18,10 @@
     left: 0;
     right: 0;
   }
+
+  @include mobile {
+    height: 400px;
+  }
 }
 
 .container {
@@ -33,6 +38,12 @@
   line-height: 67px;
   color: $color-white;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+  @include mobile {
+    top: -60px;
+    left: 30px;
+    font-size: 30px;
+  }
 }
 
 .content {
@@ -46,6 +57,20 @@
   box-shadow: 0 4px 4px rgba(0, 60, 118, 0.15);
   border-radius: 16px;
   z-index: 2;
+
+  @include mobile-tablet {
+    top: -250px;
+    padding: 5%;
+    width: 100%;
+  }
+
+  @include tablet {
+    width: 90%;
+  }
+
+  @include laptop {
+    padding: 30px;
+  }
 }
 
 .subtitle {
@@ -62,15 +87,22 @@
   line-height: 19px;
   color: #1b242d;
   margin-bottom: 25px;
+
+  @include mobile {
+    padding-top: 30px;
+  }
 }
 
 .categoriesList {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  //transform: translateX(-40px);
   row-gap: 34px;
   column-gap: 24px;
   padding-left: 0;
+
+  @include mobile {
+    grid-template-columns: 1fr
+  }
 }
 
 .planner__list-item {
