--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -161,6 +161,9 @@
   transition: 0.5s;
   border-radius: 30px;
   z-index: 9999;
+  @include tablet-desktop {
+    display: none;
+  }
 }
 
 .hamburger:before,
