--- a/src/pages/HomePage/Main/Main.module.scss
+++ b/src/pages/HomePage/Main/Main.module.scss
@@ -17,18 +17,28 @@
   }
 }
 
-.main_wrapper {
-  width: 100%;
-  height: 100%;
+.main_blur {
+  width: 50%;
+  height: 114vh;
   background-color: rgba(0, 60, 118, 0.25);
   backdrop-filter: blur(4px);
-
+  position: absolute;
+  top: 0;
   @include mobile-tablet {
     width: 60%;
   }
+
   @include mobile {
     height: 445px;
     width: 100%;
+  }
+}
+
+.main_wrapper {
+  width: 100%;
+  height: 100%;
+
+  @include mobile {
     padding-right: 20px;
   }
 }
