--- a/src/pages/HomePage/Main/Main.module.scss
+++ b/src/pages/HomePage/Main/Main.module.scss
@@ -19,7 +19,7 @@
 
 .main_blur {
   width: 50%;
-  height: 114vh;
+  height: 810px;
   background-color: rgba(0, 60, 118, 0.25);
   backdrop-filter: blur(4px);
   position: absolute;
